# routes/notificationRoutes.js
@@ -5,6 +5,10 @@ const { asyncErrorHandler } = require("../middleware/errorMiddleware");
 const NotificationController = require('../controllers/notificationController');
 
 
+router.post('/createNotification', asyncErrorHandler(NotificationController.createNotification));
 router.get('/', asyncErrorHandler(NotificationController.getNotifications));
+router.get('/createMany', asyncErrorHandler(NotificationController.createMany));
 router.patch('/:id/read', asyncErrorHandler(NotificationController.markAsRead));
+router.delete('/:id', asyncErrorHandler(NotificationController.deleteNotification));
+
 module.exports = router;
